# quantum-workbench

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/quantum/: experiments.py  runtime.py  store.py
app/static/: app.js  index.html  style.css
architecture/: blueprint.json
docs/: IBM_HARDWARE_PROOF_20260317.md  IBM_RUNTIME_OPTIONS_20260317.md  QUNOVA_ALIGNMENT.md  REAL_BACKEND_RUNBOOK.md  VERIFICATION_GUIDE.md  cloud-ai-architecture.md  commercial-offer.md  conversion-ux-model.md  enterprise-readiness.md  monetization-playbook.md  portfolio-fit.md  quality-gate.md  revenue-growth-model.md  reviewer-evidence-map.md
docs/architecture/: blueprint.json
scripts/: exercise_runtime.py  run_real_backend_demo.py
tests/: test_api.py
